--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
             <h2>Succession Expertise for Financial Advisors</h2>
-            <p>As the premier M&A Wealth Management Recruiting firm, Succession Point helps Financial Advisors navigate the most attractive Monetization, Succession, Acquisition and Growth offerings in the industry today. All at NO COST to you.</p>
+            <p style="text-align: center;">As the premier M&A Wealth Management Recruiting firm, Succession Point helps Financial Advisors navigate the most attractive Monetization, Succession, Acquisition and Growth offerings in the industry today. All at NO COST to you.</p>
             <a href="#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
@@ -90,7 +90,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
             <h2>Building Generational Wealth</h2>
-            <p>There's never been a more exciting time to capture EXTRAORDINARY revenue multiples, access growth accelerators and leverage operational efficiencies. We help elite Financial Advisors maximize their enterprise valuations to fit their ideal practice structure.</p>
+            <p style="text-align: center;">There's never been a more exciting time to capture EXTRAORDINARY revenue multiples, access growth accelerators and leverage operational efficiencies. We help elite Financial Advisors maximize their enterprise valuations to fit their ideal practice structure.</p>
             <a href="#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
@@ -99,7 +99,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
           <div class="carousel-container">
             <h2>3-16x Revenue Multiples</h2>
-            <p>Monetize fraction or entire practice, continue advising, or retire. Capture enterprise pricing and expanded infrastructure, HNW family office resources. Retain your branding, models, and methods while accessing alternatives and private deals.</p>
+            <p style="text-align: center;">Monetize fraction or entire practice, continue advising, or retire. Capture enterprise pricing and expanded infrastructure, HNW family office resources. Retain your branding, models, and methods while accessing alternatives and private deals.</p>
             <a href="#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
@@ -108,7 +108,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-4.jpg" alt="">
           <div class="carousel-container">
             <h2>30+ Years of Industry Expertise</h2>
-            <p>With over three decades of experience, we offer PERSONALIZED, CONFIDENTIAL consultation to help you achieve your unique practice objectives. One-on-one consulting to facilitate your buying/selling goals.</p>
+            <p style="text-align: center;">With over three decades of experience, we offer PERSONALIZED, CONFIDENTIAL consultation to help you achieve your unique practice objectives. One-on-one consulting to facilitate your buying/selling goals.</p>
             <a href="#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
