--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li class="dropdown"><a href="#"><span>Who We Serve</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -80,7 +79,7 @@
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
-            <h2>Succession Expertise for Financial Advisors</h2>
+            <h2 style="text-align: center;">Succession Expertise for Financial Advisors</h2>
             <p style="text-align: center;">As the premier M&A Wealth Management Recruiting firm, Succession Point helps Wealth Managers navigate the most attractive Monetization, Succession, Acquisition and Growth offerings in the industry today. All at NO COST to you.
 
 </p>
@@ -91,7 +90,7 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
-            <h2>Building Generational Wealth</h2>
+            <h2 style="text-align: center;">Building Generational Wealth</h2>
             <p style="text-align: center;">There's never been a more exciting time to capture EXTRAORDINARY revenue multiples, access growth accelerators and leverage operational efficiencies. We help elite Financial Advisors maximize their enterprise valuations to fit their ideal practice structure.</p>
             <a href="#contact" class="btn-get-started">Get Started</a>
           </div>
@@ -100,7 +99,7 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
           <div class="carousel-container">
-            <h2>3-16x Revenue Multiples</h2>
+            <h2 style="text-align: center;">3-16x Revenue Multiples</h2>
             <p style="text-align: center;">Monetize fraction or entire practice, continue advising, or retire. Capture enterprise pricing and expanded infrastructure, HNW family office resources. Retain your branding, models, and methods while accessing alternatives and private deals.</p>
             <a href="#contact" class="btn-get-started">Get Started</a>
           </div>
@@ -109,7 +108,7 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-4.jpg" alt="">
           <div class="carousel-container">
-            <h2>30+ Years of Industry Expertise</h2>
+            <h2 style="text-align: center;">30+ Years of Industry Expertise</h2>
             <p style="text-align: center;">With over three decades of experience, we offer PERSONALIZED, CONFIDENTIAL consultation to help you achieve your unique practice objectives. One-on-one consulting to facilitate your buying/selling goals.</p>
             <a href="#contact" class="btn-get-started">Get Started</a>
           </div>
@@ -118,8 +117,8 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-5.jpg" alt="">
           <div class="carousel-container">
-            <h2>The Largest Transfer of Wealth In History</h2>
-            <p>With 35% of advisors retiring in the next 8 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</p>
+            <h2 style="text-align: center;">The Largest Transfer of Wealth In History</h2>
+            <p style="text-align: center;">With 35% of advisors retiring in the next 8 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</p>
             <a href="#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
@@ -184,7 +183,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About Succession Point</h2>
+        <h2 style="text-align: center;">About Succession Point</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -302,8 +301,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Our Services</h2>
-        <p>Comprehensive M&A solutions tailored to your unique practice objectives</p>
+        <h2 style="text-align: center;">Our Services</h2>
+        <p style="text-align: center;">Comprehensive M&A solutions tailored to your unique practice objectives</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -387,8 +386,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Who We Serve</h2>
-        <p>Tailored solutions for every stage of your advisory journey</p>
+        <h2 style="text-align: center;">Who We Serve</h2>
+        <p style="text-align: center;">Tailored solutions for every stage of your advisory journey</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -445,8 +444,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Our Process</h2>
-        <p>A proven approach to maximizing value and ensuring smooth transitions</p>
+        <h2 style="text-align: center;">Our Process</h2>
+        <p style="text-align: center;">A proven approach to maximizing value and ensuring smooth transitions</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -506,8 +505,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Client Success Stories</h2>
-        <p>Hear from advisors who have successfully navigated transitions with Succession Point</p>
+        <h2 style="text-align: center;">Client Success Stories</h2>
+        <p style="text-align: center;">Hear from advisors who have successfully navigated transitions with Succession Point</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -546,6 +545,22 @@
               </div>
             </div><!-- End testimonial item -->
 
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/Marc_Mckoy.jpg" class="testimonial-img" alt="">
+                <h3>Marc McKoy</h3>
+                <h4>Senior Vice President, Capitol Securities Management Inc.</h4>
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>With 35% of advisors retiring in the next 8 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
             
           </div>
           <div class="swiper-pagination"></div>
@@ -559,16 +574,16 @@
     <section id="team" class="team section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Leadership</h2>
-        <p>Industry expertise you can trust</p>
+      <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px;">
+        <h2 style="text-align: center;">Our Founder</h2>
+        <p style="text-align: center; color: #000000;">35 Years of M&A Expertise</p>
       </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row gy-4 justify-content-center">
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/team/Michele.jpeg" class="img-fluid" alt="Michele Mandeville">
               <div class="member-info">
@@ -576,33 +591,34 @@
                   <h4>Michele Mandeville</h4>
                   <span>Founder & CEO</span>
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/michele-mandeville-87a16857/"><i class="bi bi-linkedin"></i></a>
+                    <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a> -->
+                    <!-- <a href=""><i class="bi bi-instagram"></i></a>  -->
+                    
                   </div>
                 </div>
               </div>
               <div class="member-bio">
-                <h5>Bio</h5>
+                <h5>Founder & CEO</h5>
                 <p>In 1994, Michele founded PRISM Wealth Management Recruiting, an elite consulting firm specialized in the Wealth Management industry. Since its inception, Michele has advised thousands of Financial Advisors and Wealth Management firms, offering her industry knowledge and insights to facilitate their vision of success.</p>
                 <p class="member-email"><i class="bi bi-envelope"></i> michele@successionpoint.com</p>
               </div>
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/img/team/Julie.jpeg" class="img-fluid" alt="Julie Mandeville">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Julie Mandeville</h4>
                   <span>Vice President</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <div class="social"> -->
+                    <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a> -->
+                    <!-- <a href="https://www.linkedin.com/in/julie-link-mandeville-965a7b202/"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -612,7 +628,7 @@
                 <p class="member-email"><i class="bi bi-envelope"></i> julie@successionpoint.com</p>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>End Team Member -->
 
         </div>
 
@@ -626,8 +642,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Frequently Asked Questions</h2>
-        <p>Common questions about practice transitions and M&A services</p>
+        <h2 style="text-align: center;">Frequently Asked Questions</h2>
+        <p style="text-align: center;">Common questions about practice transitions and M&A services</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -709,8 +725,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Let's Connect</h2>
-        <p>Schedule a free, confidential consultation to explore your options</p>
+          z<h2 style="text-align: center;">Let's Connect</h2>
+        <p style="text-align: center;">Schedule a free, confidential consultation to explore your options</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -826,10 +842,10 @@
             <p><strong>Email:</strong> <span>team@successionpoint.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href=""><i class="bi bi-instagram"></i></a> -->
+            <a href="https://www.linkedin.com/company/prism-wealth-management-recruiting/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
@@ -844,18 +860,9 @@
           </ul>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><a href="#services">Practice Acquisitions</a></li>
-            <li><a href="#services">Practice Monetization</a></li>
-            <li><a href="#services">Practice Sales</a></li>
-            <li><a href="#services">Strategic Partnerships</a></li>
-            <li><a href="#services">Practice Valuations</a></li>
-          </ul>
-        </div>
 
-        <div class="col-lg-4 col-md-12 footer-newsletter">
+
+        <!-- <div class="col-lg-4 col-md-12 footer-newsletter">
           <h4>Our Newsletter</h4>
           <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
           <form action="forms/newsletter.php" method="post" class="php-email-form">
@@ -864,7 +871,7 @@
             <div class="error-message"></div>
             <div class="sent-message">Your subscription request has been sent. Thank you!</div>
           </form>
-        </div>
+        </div> -->
 
       </div>
     </div>
