--- a/insights.html
+++ b/insights.html
@@ -190,7 +190,7 @@
                 </div>
                 <h5 class="card-title">The Succession Crisis: Why 99% of Advisors Lack Written Plans</h5>
                 <p class="card-text">Despite 43% of advisors planning to retire within 10 years, our research reveals a startling gap in succession preparedness. Learn why early planning can increase valuations by 30% and protect client relationships.</p>
-                <a href="#" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://www.advisorhub.com/succession-crisis-94-of-firm-owners-nearing-retirement-lack-comprehensive-plan/" target="_blank" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
                 </div>
                 <h5 class="card-title">Valuation Trends: Understanding the 3.08x Revenue Multiple</h5>
                 <p class="card-text">Average multiples have stabilized, but significant variation exists based on practice characteristics. Discover the key factors driving premium valuations and how to position your practice for maximum value.</p>
-                <a href="#" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://exitwise.com/blog/ria-valuation" target="_blank" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
                 </div>
                 <h5 class="card-title">Private Equity's Evolving Role in Advisor Acquisitions</h5>
                 <p class="card-text">PE-backed aggregators remain selective but active, with 51% of investment bankers expecting increased sponsor activity in 2025. Learn what PE buyers seek and how deal structures are evolving.</p>
-                <a href="#" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://www.wealthmanagement.com/ria-news/the-top-10-wealth-management-m-a-deals-in-2024" target="_blank" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -238,7 +238,7 @@
                 </div>
                 <h5 class="card-title">The New Deal Structure: Why 7-12 Year Transitions Are Becoming Standard</h5>
                 <p class="card-text">The "equity-culture revolution" is reshaping M&A negotiations. Understand why longer transition periods benefit both buyers and sellers, and how to structure deals for optimal outcomes.</p>
-                <a href="#" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://www.bain.com/insights/wealth-and-asset-management-m-and-a-report-2024/" target="_blank" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -254,7 +254,7 @@
                 </div>
                 <h5 class="card-title">Internal Succession Trends: 36% Now Using External Capital</h5>
                 <p class="card-text">The average stake sold to internal successors reached 20.9% in 2024. Explore financing options for next-gen advisors and how external capital is facilitating internal transitions.</p>
-                <a href="#" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://www.successionresource.com/blog/srg-advisor-deal-report-2025/" target="_blank" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -270,7 +270,7 @@
                 </div>
                 <h5 class="card-title">Buyer Priorities: Why Recurring Revenue Tops the List</h5>
                 <p class="card-text">69% of investment bankers cite recurring revenue as buyers' top priority—up 6% from 2023. Learn what else buyers seek and how to position your practice as an attractive acquisition target.</p>
-                <a href="#" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://www.capstonepartners.com/insights/global-ma-trends-survey-report/" target="_blank" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -280,7 +280,7 @@
     </section><!-- /Articles Grid Section -->
 
     <!-- Newsletter Section -->
-    <section id="newsletter" class="newsletter section">
+    <!-- <section id="newsletter" class="newsletter section">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8" data-aos="fade-up">
@@ -305,68 +305,13 @@
             </div>
           </div>
         </div>
-      </div>
-    </section><!-- /Newsletter Section -->
+      </div> -->
+    <!-- </section>/Newsletter Section -->
 
-    <!-- Resources Section -->
-    <section id="resources" class="resources section light-background">
-      <div class="container">
+
         
         <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-          <h2>Essential Resources</h2>
-          <p>Tools and guides to navigate your M&A journey</p>
-        </div><!-- End Section Title -->
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="card h-100 border-0 shadow-sm">
-              <div class="card-body text-center p-4">
-                <div class="icon mb-3" style="font-size: 3rem; color: #18d26e;"><i class="bi bi-calculator"></i></div>
-                <h5 class="card-title mb-3">Valuation Calculator</h5>
-                <p class="card-text mb-3">Get an instant estimate of your practice value based on current market multiples.</p>
-                <a href="index.html#contact" class="btn btn-outline-primary">Calculate Now</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="card h-100 border-0 shadow-sm">
-              <div class="card-body text-center p-4">
-                <div class="icon mb-3" style="font-size: 3rem; color: #18d26e;"><i class="bi bi-file-text"></i></div>
-                <h5 class="card-title mb-3">2025 M&A Report</h5>
-                <p class="card-text mb-3">Comprehensive analysis of trends, valuations, and predictions for the year ahead.</p>
-                <a href="index.html#contact" class="btn btn-outline-primary">Download PDF</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="card h-100 border-0 shadow-sm">
-              <div class="card-body text-center p-4">
-                <div class="icon mb-3" style="font-size: 3rem; color: #18d26e;"><i class="bi bi-list-check"></i></div>
-                <h5 class="card-title mb-3">Succession Checklist</h5>
-                <p class="card-text mb-3">Step-by-step guide to preparing your practice for a successful transition.</p>
-                <a href="index.html#contact" class="btn btn-outline-primary">Get Checklist</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="card h-100 border-0 shadow-sm">
-              <div class="card-body text-center p-4">
-                <div class="icon mb-3" style="font-size: 3rem; color: #18d26e;"><i class="bi bi-camera-video"></i></div>
-                <h5 class="card-title mb-3">Webinar Series</h5>
-                <p class="card-text mb-3">Expert sessions on M&A strategies, tax optimization, and deal structuring.</p>
-                <a href="index.html#contact" class="btn btn-outline-primary">Register Free</a>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section><!-- /Resources Section -->
+       
 
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
@@ -407,7 +352,7 @@
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/prism-wealth-management-recruiting/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
