--- a/for-sellers.html
+++ b/for-sellers.html
@@ -48,7 +48,7 @@
               <li><a href="for-buyers.html">Buyers</a></li>
             </ul>
           </li>
-          <li><a href="insights.html">Insights</a></li>
+          <!-- <li><a href="insights.html">Insights</a></li> -->
           <li><a href="index.html#team">Leadership</a></li>
           <li><a href="index.html#testimonials">Testimonials</a></li>
           <li><a href="index.html#faq">FAQ</a></li>
@@ -230,7 +230,7 @@
                 </div>
               </div>
               <!-- Right Column -->
-              <div class="col-md-6">
+              <div class="col-md-6 flex-column justify-content-center align-items-center">
                 <div class="row gy-4">
                   <div class="col-12">
                     <div class="stats-item text-white p-4">
@@ -242,7 +242,7 @@
                       <p class="mb-0 text-white-50">Our streamlined process closes deals in 3-9 months versus multiple years for unrepresented sellers</p>
                     </div>
                   </div>
-                  <div class="col-12">
+                  <!-- <div class="col-12">
                     <div class="stats-item text-white p-4">
                       <div class="d-flex align-items-baseline">
                         <span class="display-3 fw-bold" data-purecounter-start="0" data-purecounter-end="98" data-purecounter-duration="1">98</span>
@@ -251,7 +251,7 @@
                       <h4 class="mt-2 mb-3 text-white fw-semibold">Client Retention Rate</h4>
                       <p class="mb-0 text-white-50">Our careful buyer vetting and transition planning ensures exceptional client continuity post-sale</p>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
