--- a/for-buyers.html
+++ b/for-buyers.html
@@ -48,7 +48,7 @@
               <li><a href="for-buyers.html">Buyers</a></li>
             </ul>
           </li>
-          <li><a href="insights.html">Insights</a></li>
+          <!-- <li><a href="insights.html">Insights</a></li> -->
           <li><a href="index.html#team">Leadership</a></li>
           <li><a href="index.html#testimonials">Testimonials</a></li>
           <li><a href="index.html#faq">FAQ</a></li>
