--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <li><a href="for-buyers.html">Buyers</a></li>
             </ul>
           </li>
-          <li><a href="insights.html">Insights</a></li>
+          <!-- <li><a href="insights.html">Insights</a></li> -->
           <li><a href="#team">Leadership</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
           <li><a href="#faq">FAQ</a></li>
@@ -739,7 +739,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center info-item-borders">
               <i class="bi bi-telephone"></i>
               <h3>Call Us</h3>
-              <p>Schedule a Consultation</p>
+              <p>+1 (407) 980-8212</p>
             </div>
           </div><!-- End Info Item -->
 
