--- a/thank-you.html
+++ b/thank-you.html
@@ -194,7 +194,7 @@
               <li><a href="for-buyers.html">Buyers</a></li>
             </ul>
           </li>
-          <li><a href="insights.html">Insights</a></li>
+          <!-- <li><a href="insights.html">Insights</a></li> -->
           <li><a href="index.html#team">Leadership</a></li>
           <li><a href="index.html#testimonials">Testimonials</a></li>
           <li><a href="index.html#faq">FAQ</a></li>
