--- a/index.html
+++ b/index.html
@@ -772,8 +772,8 @@
 
             <div class="col-md-6">
               <div class="form-group">
-                <label for="phone" class="form-label">Phone Number *</label>
-                <input type="tel" id="phone" name="phone" class="form-control" placeholder="(555) 123-4567" required>
+                <label for="phone" class="form-label">Phone Number</label>
+                <input type="tel" id="phone" name="phone" class="form-control" placeholder="(555) 123-4567">
               </div>
             </div>
 
