--- a/for-sellers.html
+++ b/for-sellers.html
@@ -198,7 +198,8 @@
     </section><!-- /About Section -->
 
     <!-- Stats Section -->
-    <section id="stats" class="stats section" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+    <section id="stats" class="stats section" style="background: linear-gradient(
+164deg, #000000 0%, #797979 100%);">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
