--- a/for-sellers.html
+++ b/for-sellers.html
@@ -34,25 +34,26 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/SuccessionPointLogoBlue.png" alt="" style="width: 200px"> -->
+        <img src="assets/img/SuccessionPointLogoBlue.png" alt="" style="width: 200px">
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html#about">About</a></li>
-          <li><a href="service-details.html">Services</a></li>
-          <li class="dropdown"><a href="#" class="active"><span>Who We Serve</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li class="dropdown"><a href="#"><span>Who We Serve</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="for-sellers.html">Sellers</a></li>
               <li><a href="for-buyers.html">Buyers</a></li>
             </ul>
           </li>
           <!-- <li><a href="insights.html">Insights</a></li> -->
-          <li><a href="index.html#team">Leadership</a></li>
-          <li><a href="index.html#testimonials">Testimonials</a></li>
-          <li><a href="index.html#faq">FAQ</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="#team">Leadership</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#faq">FAQ</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -668,7 +669,7 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo.png" alt="">
+            <img src="assets/img/logo.png" alt="" style="width: 100px;">
           </a>
           <div class="footer-contact pt-3">
             <p>Premier M&A Advisory</p>
