--- a/for-buyers.html
+++ b/for-buyers.html
@@ -74,7 +74,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
             <h2>The Largest Transfer of Wealth Management Practices in History</h2>
-            <p>With 35% of advisors retiring in the next 8 years, the next decade presents an unprecedented opportunity to acquire high-quality practices. Let Succession Point surgically target acquisitions that match your growth strategy.</p>
+            <p>With 35% of advisors retiring in the next 8-10 years, the next decade presents an unprecedented opportunity to acquire high-quality practices. Let Succession Point surgically target acquisitions that match your growth strategy.</p>
             <a href="#featured-services" class="btn-get-started">Start Growing</a>
           </div>
         </div>
@@ -165,9 +165,9 @@
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <p class="who-we-are">The Opportunity</p>
-            <h3>35% of Advisors Retiring in 8 Years</h3>
+            <h3>35% of Advisors Retiring in 8-10 years</h3>
             <p class="fst-italic">
-              Simply put, the next 10 years will be the largest transfer of wealth management practices in history. With an estimated 1/3 of advisors set to retire this decade, there is an incredible opportunity for advisors to acquire high-quality practices.
+              Simply put, the next 8-10 years will be the largest transfer of wealth management practices in history. With an estimated 1/3 of advisors set to retire this decade, there is an incredible opportunity for advisors to acquire high-quality practices.
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>Immediate scale and revenue growth</span></li>
@@ -231,7 +231,7 @@
                         <span class="display-4 ms-1">%</span>
                       </div>
                       <h4 class="mt-2 mb-3 text-white fw-semibold">Advisors Retiring Soon</h4>
-                      <p class="mb-0 text-white-50">Over one-third of advisors retiring in the next 8 years creates unprecedented acquisition opportunities</p>
+                      <p class="mb-0 text-white-50">Over one-third of advisors retiring in the next 8-10 years creates unprecedented acquisition opportunities</p>
                     </div>
                   </div>
                 </div>
