--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-5.jpg" alt="">
           <div class="carousel-container">
             <h2 style="text-align: center;">The Largest Transfer of Wealth In History</h2>
-            <p style="text-align: center;">With 35% of advisors retiring in the next 8 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</p>
+            <p style="text-align: center;">With 35% of advisors retiring in the next 8-10 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</p>
             <a href="#contact" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
@@ -314,7 +314,7 @@
               <i class="bi bi-briefcase icon flex-shrink-0"></i>
               <div>
                 <h4 class="title"><a href="service-details.html" class="stretched-link">Buy a Practice</a></h4>
-                <p class="description">With 35% of advisors retiring in 8 years, capitalize on unprecedented acquisition opportunities. We surgically target your preferences and match you with the right sellers.</p>
+                <p class="description">With 35% of advisors retiring in 8-10 years, capitalize on unprecedented acquisition opportunities. We surgically target your preferences and match you with the right sellers.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -409,7 +409,7 @@
               <i class="bi bi-graph-up-arrow icon flex-shrink-0"></i>
               <div>
                 <h4 class="title"><a href="for-buyers.html" class="stretched-link">Buyers</a></h4>
-                <p class="description">Growth-minded advisors seeking to accelerate through acquisitions. With 35% of advisors retiring in the next 8 years, capitalize on unprecedented opportunities. Our 300,000+ network helps you find practices that align perfectly with your growth strategy.</p>
+                <p class="description">Growth-minded advisors seeking to accelerate through acquisitions. With 35% of advisors retiring in the next 8-10 years, capitalize on unprecedented opportunities. Our 300,000+ network helps you find practices that align perfectly with your growth strategy.</p>
               </div>
             </div>
           </div><!-- End Who We Serve Item -->
@@ -555,7 +555,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>With 35% of advisors retiring in the next 8 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</span>
+                  <span>With 35% of advisors retiring in the next 8-10 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -725,7 +725,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-          z<h2 style="text-align: center;">Let's Connect</h2>
+          <h2 style="text-align: center;">Let's Connect</h2>
         <p style="text-align: center;">Schedule a free, confidential consultation to explore your options</p>
       </div><!-- End Section Title -->
 
