--- a/insights.html
+++ b/insights.html
@@ -189,7 +189,7 @@
                   <span class="badge bg-secondary">Succession Planning</span>
                 </div>
                 <h5 class="card-title">The Succession Crisis: Why 99% of Advisors Lack Written Plans</h5>
-                <p class="card-text">Despite 43% of advisors planning to retire within 10 years, our research reveals a startling gap in succession preparedness. Learn why early planning can increase valuations by 30% and protect client relationships.</p>
+                <p class="card-text">Despite 43% of advisors planning to retire within 8-10 years, our research reveals a startling gap in succession preparedness. Learn why early planning can increase valuations by 30% and protect client relationships.</p>
                 <a href="https://www.advisorhub.com/succession-crisis-94-of-firm-owners-nearing-retirement-lack-comprehensive-plan/" target="_blank" class="btn btn-outline-primary mt-auto">Read More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
