--- a/service-details.html
+++ b/service-details.html
@@ -43,21 +43,25 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Succession Point</h1>
+        <!-- <img src="assets/img/SuccessionPointLogoBlue.png" alt="" style="width: 200px"> -->
+        <img src="assets/img/SuccessionPointLogoBlue.png" alt="" style="width: 200px">
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html#about">About</a></li>
-          <li><a href="service-details.html" class="active">Services</a></li>
-          <li><a href="for-sellers.html">For Sellers</a></li>
-          <li><a href="for-buyers.html">For Buyers</a></li>
-          <li><a href="index.html#team">Leadership</a></li>
-          <li><a href="index.html#testimonials">Testimonials</a></li>
-          <li><a href="index.html#faq">FAQ</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li class="dropdown"><a href="#"><span>Who We Serve</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="for-sellers.html">Sellers</a></li>
+              <li><a href="for-buyers.html">Buyers</a></li>
+            </ul>
+          </li>
+          <!-- <li><a href="insights.html">Insights</a></li> -->
+          <li><a href="#team">Leadership</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#faq">FAQ</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -99,12 +103,12 @@
               </div>
 
               <h4>Why Succession Point?</h4>
-              <p>With 35% of advisors retiring in the next 8 years, we leverage our 300,000+ advisor network to help you navigate this unprecedented opportunity. Our expertise ensures you maximize enterprise value whether buying, selling, or partnering.</p>
+              <p>With 35% of advisors retiring in the next 8-10 years, we leverage our 300,000+ advisor network to help you navigate this unprecedented opportunity. Our expertise ensures you maximize enterprise value whether buying, selling, or partnering.</p>
               
               <div class="sidebar-stats mt-5">
                 <div class="stat-item mb-4 p-3" style="background-color: #f8f9fa; border-radius: 8px;">
                   <h5 class="mb-2" style="color: #18d26e; font-size: 2rem; font-weight: bold;">35%</h5>
-                  <p class="mb-0 small">Advisors Retiring in 8 Years</p>
+                  <p class="mb-0 small">Advisors Retiring in 8-10 years</p>
                 </div>
                 <div class="stat-item mb-4 p-3" style="background-color: #f8f9fa; border-radius: 8px;">
                   <h5 class="mb-2" style="color: #18d26e; font-size: 2rem; font-weight: bold;">3-16x</h5>
@@ -116,9 +120,9 @@
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Maximize Your Enterprise Value Through Strategic M&A Advisory</h3>
+            <h3>Welcome to the New Advisory Paradigm</h3>
             <p>
-              The next 10 years will witness the largest transfer of wealth management practices in history. With an estimated one-third of advisors set to retire this decade, there's an incredible opportunity for strategic growth through acquisitions, partnerships, or succession planning.
+              Over the next 8-10 years, the wealth management industry will experience the largest transfer of practices in history. Whether you're considering a family office, minority investment, full acquisition, or a sell-and-stay, there is a solution tailored to every firm.
             </p>
             
             <div class="service-section mt-5" id="buy">
@@ -163,7 +167,7 @@
                 <strong>4-9x Revenue for Full Acquisitions</strong>
               </div>
               <p>
-                If you plan to retire in the next 5-10 years, now is the time to begin crafting your unique succession plan. We help you navigate all the complexities:
+                If you plan to retire in the next 5-8-10 years, now is the time to begin crafting your unique succession plan. We help you navigate all the complexities:
               </p>
               <ul>
                 <li><i class="bi bi-check-circle"></i> <span>Determine your optimal retirement timeline</span></li>
@@ -222,7 +226,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="35" data-purecounter-duration="1" class="purecounter"></span>
-              <p>% Advisors Retiring in 8 Years</p>
+              <p>% Advisors Retiring in 8-10 years</p>
             </div>
           </div>
 
