--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>With 35% of advisors retiring in the next 8-10 years, the next decade will witness the largest transfer of wealth management practices in history. Whether you're buying, selling, or monetizing, we help you navigate this unprecedented opportunity.</span>
+                  <span>Michele is hands-down the most knowledgeable advocate in the advisor M&A space. She has deep knowledge of the firms, deal structures, and what matters most to advisors. She brings clarity without pressure—always focused on what’s right for you and your business. Partnering with her and her team is a decision you can feel confident about.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -657,7 +657,7 @@
               <div class="faq-item">
                 <h3>What makes Succession Point different from other M&A firms?</h3>
                 <div class="faq-content">
-                  <p>With 35+ years of exclusive focus on wealth management transitions and personalized consultation at no cost to advisors, we offer unmatched expertise and resources. The Succession Point team's deep industry relationships enable optimal matches and outcomes.</p>
+                  <p>With 35+ years focused solely on wealth management transitions, deep industry connections, and unmatched expertise, we deliver the best matches and results.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
@@ -758,7 +758,7 @@
 
             <div class="col-md-6">
               <div class="form-group">
-                <label for="name" class="form-label">Full Name *</label>
+                <label for="name" class="form-label">Name *</label>
                 <input type="text" id="name" name="name" class="form-control" placeholder="John Smith" required>
               </div>
             </div>
@@ -796,8 +796,8 @@
 
             <div class="col-md-12">
               <div class="form-group">
-                <label for="message" class="form-label">Tell Us More About Your Needs *</label>
-                <textarea id="message" class="form-control" name="message" rows="6" placeholder="Please share details about your practice and objectives..." required></textarea>
+                <label for="message" class="form-label">Tell Us More About Your Practice Objectives *</label>
+                <textarea id="message" class="form-control" name="message" rows="6" placeholder="Please share how we can help..." required></textarea>
               </div>
             </div>
 
